--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -500,29 +500,12 @@ ul
 .row-margin-bottom
   margin-bottom 50px
 
-.pagination
-  width 100%
-  margin auto
-  text-align center
-  margin-bottom 20px
+.row
+  margin 20px 0
 
-.pagination li
-  display inline-block
+td.details-control
+    background url('../imagenes/details_open.png') no-repeat center center
+    cursor pointer
 
-.pagination>li>a
-  float none
-
-.current
-  margin 0 10px
-
-.cardinality
-  margin 0 10px
-  font-size 10px
-
-.previous
-  float left
-  position relative
-
-.next
-  float right
-  position relative
+tr.shown td.details-control
+    background url('../imagenes/details_close.png') no-repeat center center
