--- a/templates/ofertas/seleccionar.html
+++ b/templates/ofertas/seleccionar.html
@@ -1,1 +1,195 @@
-{% load staticfiles %}{% load django_tables2 crispy_forms_tags %}<!DOCTYPE html><html lang="es"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta property="og:image" content="http://www.fastworkcolombia.com/static/imagenes/fastwork-640.jpg"><meta property="og:type" content="article"><meta property="og:url" content="http://www.fastworkcolombia.com"><meta property="og:title" content="Fast Work Colombia S.A.S."><meta property="og:site_name" content="Fast Work Colombia S.A.S."><meta property="og:locale" content="es_LA"><meta property="og:description" content="Puedes suscribirte o iniciar sesión usando tu cuenta de Facebook, Twitter o Gmail, solo usamos estas cuentas para generar tu usuario y conocer tu correo electrónico, de ninguna manera compartiremos tu información con terceros, si lo prefieres tambien puedes registrarte de manera tradicional confirmando tu correo electrónico."><link rel="shortcut icon" href="{% static 'imagenes/icon.png' %}"><link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;subset=latin" rel="stylesheet" media="all"><title>Seleccion</title><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.1/animate.min.css"><link rel="stylesheet" href="{% static 'css/base.css' %}"></head><body><nav role="navigation" class="navbar navbar-fastwork navbar-fixed-top"><div class="container-fluid"><div class="navbar-header"><button type="button" data-toggle="collapse" data-target="#fastwork-navbar" aria-expanded="false" class="navbar-toggle collapsed"><span class="sr-only">Menu</span><span style="color:white;" class="fa fa-bars"></span></button><a rel="home" href="/" title="Fast Work Colombia" class="navbar-brand"><img src="{% static 'imagenes/logo.svg' %}"></a></div><div id="fastwork-navbar" class="collapse navbar-collapse"><ul class="nav navbar-nav navbar-right">{% if user.is_authenticated %}<li class="dropdown avatar"><a href="#" style="padding:5px 15px 0px 15px;" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><div class="img-avatar">{% if user.photo_email != "" %}<img src="{{MEDIA_URL}}{{user.photo_email}}">{% elif user.photo != None %}<img src="{{user.photo}}">{% else %}<img src="{% static 'imagenes/unknown_user.png' %}">{% endif %}</div><i aria-hidden="true" class="fa fa-caret-down"></i></a><ul class="dropdown-menu user-options"><li><a href="/ofertas/">Ofertas<span class="glyphicon glyphicon-star pull-left"></span></a></li><li><a href="/accounts/">Mi perfil ({{user.username}})<span class="glyphicon glyphicon-user pull-left"></span></a></li><li><a href="/hv/">Hoja de vida<span class="glyphicon glyphicon-file pull-left"></span></a></li><li><a href="/logout/">Salir<span class="glyphicon glyphicon-log-out pull-left"></span></a></li></ul></li>{% endif %}</ul></div></div></nav><div style="margin-top:50px;"></div><button value="{{user.identificacion}}" style="display:none;" id="identificacion"></button><div style="padding-top:30px;" class="container-fluid"><div class="row"><div class="col-xs-12 col-md-9">{% render_table table %}</div><div class="col-xs-12 col-md-3"><form action="" method="get" id="filter-form">{% crispy filter.form %}<input type="submit" value="Buscar" id="id_filter" class="btn btn-success"></form></div></div></div><footer><div class="container-fluid footer-content"><div class="row"><div class="col-md-6 text-center"><p>Correo: gerencia@fastworkcolombia.com</p></div><div class="col-md-6 text-center"><ul class="footer-social-list text-center inline"><a href="https://www.facebook.com/fastworkcolombia/" target="_blank"><li class="fa fa-facebook-square fa-2x"></li></a><li class="fa fa-twitter-square fa-2x"></li><li class="fa fa-skype fa-2x"></li></ul></div><div class="col-md-12 text-center creador"><p>Desarrollado por Diego Andres Fonseca | dandresfsoto@gmail.com | &copy2016</p></div></div></div></footer><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.js"></script><script src="{% static 'js/moment.es.js' %}"></script><script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script><script src="https://cdn.jsdelivr.net/jquery.chained/0.9.9/jquery.chained.remote.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.5.2/jquery.timeago.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.2/Chart.min.js"></script><script src="{% static 'js/bootstrap-notify.min.js' %}"></script></body></html>
+{% load staticfiles %}<!DOCTYPE html><html lang="es"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta property="og:image" content="http://www.fastworkcolombia.com/static/imagenes/fastwork-640.jpg"><meta property="og:type" content="article"><meta property="og:url" content="http://www.fastworkcolombia.com"><meta property="og:title" content="Fast Work Colombia S.A.S."><meta property="og:site_name" content="Fast Work Colombia S.A.S."><meta property="og:locale" content="es_LA"><meta property="og:description" content="Puedes suscribirte o iniciar sesión usando tu cuenta de Facebook, Twitter o Gmail, solo usamos estas cuentas para generar tu usuario y conocer tu correo electrónico, de ninguna manera compartiremos tu información con terceros, si lo prefieres tambien puedes registrarte de manera tradicional confirmando tu correo electrónico."><link rel="shortcut icon" href="{% static 'imagenes/icon.png' %}"><link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&amp;subset=latin" rel="stylesheet" media="all"><title>Seleccion</title><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.1/animate.min.css"><link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css"><link rel="stylesheet" href="{% static 'css/base.css' %}"></head><body><nav role="navigation" class="navbar navbar-fastwork navbar-fixed-top"><div class="container-fluid"><div class="navbar-header"><button type="button" data-toggle="collapse" data-target="#fastwork-navbar" aria-expanded="false" class="navbar-toggle collapsed"><span class="sr-only">Menu</span><span style="color:white;" class="fa fa-bars"></span></button><a rel="home" href="/" title="Fast Work Colombia" class="navbar-brand"><img src="{% static 'imagenes/logo.svg' %}"></a></div><div id="fastwork-navbar" class="collapse navbar-collapse"><ul class="nav navbar-nav navbar-right">{% if user.is_authenticated %}<li class="dropdown avatar"><a href="#" style="padding:5px 15px 0px 15px;" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><div class="img-avatar">{% if user.photo_email != "" %}<img src="{{MEDIA_URL}}{{user.photo_email}}">{% elif user.photo != None %}<img src="{{user.photo}}">{% else %}<img src="{% static 'imagenes/unknown_user.png' %}">{% endif %}</div><i aria-hidden="true" class="fa fa-caret-down"></i></a><ul class="dropdown-menu user-options"><li><a href="/ofertas/">Ofertas<span class="glyphicon glyphicon-star pull-left"></span></a></li><li><a href="/accounts/">Mi perfil ({{user.username}})<span class="glyphicon glyphicon-user pull-left"></span></a></li><li><a href="/hv/">Hoja de vida<span class="glyphicon glyphicon-file pull-left"></span></a></li><li><a href="/logout/">Salir<span class="glyphicon glyphicon-log-out pull-left"></span></a></li></ul></li>{% endif %}</ul></div></div></nav><div style="margin-top:50px;"></div><button value="{{user.identificacion}}" style="display:none;" id="identificacion"></button><input id="id_oferta" value="{{id_oferta}}" hidden><input id="id_user" value="{{user.id}}" hidden><div style="padding-top:30px;" class="container-fluid"><table id="table" width="100%" class="display responsive no-wrap table table-striped table-bordered"><thead><tr><th></th><th>Nombre</th><th>Departamento</th><th>Ciudad</th><th>Titulo</th><th>Hv</th><th>Revisado</th><th>Seleccionado</th></tr></thead><tbody><tr><td></td><td>Nombre</td><td>Departamento</td><td>Ciudad</td><td>Titulo</td><td>Hv</td><td>Revisado</td><th>Seleccionado</th></tr></tbody></table></div><footer><div class="container-fluid footer-content"><div class="row"><div class="col-md-6 text-center"><p>Correo: gerencia@fastworkcolombia.com</p></div><div class="col-md-6 text-center"><ul class="footer-social-list text-center inline"><a href="https://www.facebook.com/fastworkcolombia/" target="_blank"><li class="fa fa-facebook-square fa-2x"></li></a><li class="fa fa-twitter-square fa-2x"></li><li class="fa fa-skype fa-2x"></li></ul></div><div class="col-md-12 text-center creador"><p>Desarrollado por Diego Andres Fonseca | dandresfsoto@gmail.com | &copy2016</p></div></div></div></footer><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.js"></script><script src="{% static 'js/moment.es.js' %}"></script><script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script><script src="https://cdn.jsdelivr.net/jquery.chained/0.9.9/jquery.chained.remote.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.5.2/jquery.timeago.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.2/Chart.min.js"></script><script src="{% static 'js/bootstrap-notify.min.js' %}"></script><script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script><script src="https://cdn.datatables.net/1.10.12/js/dataTables.bootstrap.min.js"></script><script>function getCookie(name) {
+    var cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+        var cookies = document.cookie.split(';');
+        for (var i = 0; i < cookies.length; i++) {
+            var cookie = jQuery.trim(cookies[i]);
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+}
+
+var csrftoken = getCookie('csrftoken');
+
+function csrfSafeMethod(method) {
+    // these HTTP methods do not require CSRF protection
+    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+}
+$.ajaxSetup({
+    beforeSend: function (xhr, settings) {
+        if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+            xhr.setRequestHeader("X-CSRFToken", csrftoken);
+        }
+    }
+});</script><script>$(document).ready(function () {
+    var id_oferta = $('#id_oferta').val();
+    var table = $('#table').DataTable({
+        "stateSave": true,
+        "searching": true,
+        "processing": true,
+        "serverSide": true,
+        "scrollX": true,
+        "ajax": "/rest/seleccion/"+id_oferta,
+        "language":{
+            "url": "//cdn.datatables.net/plug-ins/1.10.8/i18n/Spanish.json"
+        },
+        "columns": [
+            {
+                "className":'details-control',
+                "orderable":false,
+                "data":null,
+                "defaultContent": '',
+            },
+            {
+                "data": 0,
+                "orderable":true,
+            },
+            {
+                "data": 1,
+                "orderable":true,
+            },
+            {
+                "data": 2,
+                "orderable":true,
+            },
+            {
+                "data": 3,
+                "orderable":false,
+            },
+            {
+                "data": 4,
+                "render": function ( data, type, row, meta ) {
+                    if(data != ""){
+                        return '<a href="'+data+'"><img class="center-block" height="42" width="42" src="/static/imagenes/file.png"></a>';
+                    }
+                },
+                "orderable":false,
+            },
+            {
+                "data": 5,
+                "render": function ( data, type, row, meta ) {
+                    if(data != ""){
+                        if(row[12] == "true"){
+                            return '<input class="rev" type="checkbox" id="rev_'+data+'" checked>';
+                        }
+                        else{
+                            return '<input class="rev" type="checkbox" id="rev_'+data+'">';
+                        }
+                    }
+                },
+                "orderable":false,
+            },
+            {
+                "data": 5,
+                "render": function ( data, type, row, meta ) {
+                    if(data != ""){
+                        if(row[13] == "true"){
+                            return '<input class="sel" type="checkbox" id="sel_'+data+'" checked>';
+                        }
+                        else{
+                            return '<input class="sel" type="checkbox" id="sel_'+data+'">';
+                        }
+                    }
+                },
+                "orderable":false,
+            },
+        ]
+
+    });
+
+    // Add event listener for opening and closing details
+    $('#table tbody').on('click', 'td.details-control', function () {
+        var tr = $(this).closest('tr');
+        var row = table.row( tr );
+
+        if ( row.child.isShown() ) {
+            // This row is already open - close it
+            row.child.hide();
+            tr.removeClass('shown');
+        }
+        else {
+            // Open this row
+            row.child( format(row.data()) ).show();
+            tr.addClass('shown');
+        }
+    });
+
+
+    $('#table').on('draw.dt', function () {
+        $('.rev').click(function(event){
+            var state = $('#'+event.target.id)[0].checked;
+            var oferta = $('#id_oferta').val();
+            var usuario = event.target.id.split('_')[1];
+
+            if(state){
+                $.ajax({
+                    type: "PUT",
+                    url: "/rest/seleccion/revisado/",
+                    dataType: 'json',
+                    data: JSON.parse('{"oferta":'+oferta+',"usuario":"'+usuario+'"}')
+                });
+            }
+            else{
+                $.ajax({
+                    type: "DELETE",
+                    url: "/rest/seleccion/revisado/",
+                    dataType: 'json',
+                    data: JSON.parse('{"oferta":'+oferta+',"usuario":"'+usuario+'"}')
+                });
+            }
+
+        });
+
+        $('.sel').click(function(event){
+            var state = $('#'+event.target.id)[0].checked;
+            var oferta = $('#id_oferta').val();
+            var usuario = event.target.id.split('_')[1];
+
+            if(state){
+                $.ajax({
+                    type: "PUT",
+                    url: "/rest/seleccion/seleccionado/",
+                    dataType: 'json',
+                    data: JSON.parse('{"oferta":'+oferta+',"usuario":"'+usuario+'"}')
+                });
+            }
+            else{
+                $.ajax({
+                    type: "DELETE",
+                    url: "/rest/seleccion/seleccionado/",
+                    dataType: 'json',
+                    data: JSON.parse('{"oferta":'+oferta+',"usuario":"'+usuario+'"}')
+                });
+            }
+        });
+
+    });
+
+
+});
+
+
+function format(d) {
+    // `d` is the original data object for the row
+    return '<div class="table-responsive"><table class="table table-striped" style="padding-left:50px;color:black;">'+
+
+            '<tr>'+
+                '<td colspan="2"><b>Email:</b> '+d[6]+'</td>'+
+                '<td colspan="2"><b>Primer Nombre:</b> '+d[7]+'</td>'+
+                '<td colspan="2"><b>Segundo Nombre:</b> '+d[8]+'</td>'+
+            '</tr>'+
+
+            '<tr>'+
+                '<td colspan="2"><b>Fecha Nacimiento:</b> '+d[11]+'</td>'+
+                '<td colspan="2"><b>Teléfono 1:</b> '+d[9]+'</td>'+
+                '<td colspan="2"><b>Teléfono 2:</b> '+d[10]+'</td>'+
+            '</tr>'+
+
+
+            '</table></div>';
+}</script></body></html>
