Selector datatables ok

--- a/templates/ofertas/seleccionar.jade
+++ b/templates/ofertas/seleccionar.jade
@@ -72,6 +72,9 @@ block extra_script
                             if(data != ""){
                                 return '<a href="'+data+'"><img class="center-block" height="42" width="42" src="/static/imagenes/file.png"></a>';
                             }
+                            else{
+                                return ""
+                            }
                         },
                         "orderable":false,
                     },
