--- a/templates/ofertas/seleccionar.html
+++ b/templates/ofertas/seleccionar.html
@@ -67,6 +67,9 @@ $.ajaxSetup({
                     if(data != ""){
                         return '<a href="'+data+'"><img class="center-block" height="42" width="42" src="/static/imagenes/file.png"></a>';
                     }
+                    else{
+                        return ""
+                    }
                 },
                 "orderable":false,
             },
