Selector datatables order

--- a/templates/ofertas/seleccionar.html
+++ b/templates/ofertas/seleccionar.html
@@ -47,15 +47,15 @@ $.ajaxSetup({
             },
             {
                 "data": 0,
-                "orderable":true,
+                "orderable":false,
             },
             {
                 "data": 1,
-                "orderable":true,
+                "orderable":false,
             },
             {
                 "data": 2,
-                "orderable":true,
+                "orderable":false,
             },
             {
                 "data": 3,
