--- a/templates/ofertas/seleccionar.jade
+++ b/templates/ofertas/seleccionar.jade
@@ -52,15 +52,15 @@ block extra_script
                     },
                     {
                         "data": 0,
-                        "orderable":true,
+                        "orderable":false,
                     },
                     {
                         "data": 1,
-                        "orderable":true,
+                        "orderable":false,
                     },
                     {
                         "data": 2,
-                        "orderable":true,
+                        "orderable":false,
                     },
                     {
                         "data": 3,
