Selector datatables filter email

--- a/templates/ofertas/seleccionar.jade
+++ b/templates/ofertas/seleccionar.jade
@@ -70,7 +70,7 @@ block extra_script
                         "data": 4,
                         "render": function ( data, type, row, meta ) {
                             if(data != ""){
-                                return '<a href="'+data+'"><img class="center-block" height="42" width="42" src="/static/imagenes/file.png"></a>';
+                                return '<a href="'+data+'"><img class="center-block" height="42" width="42" src="/static/imagenes/file.png" target="_blank"></a>';
                             }
                             else{
                                 return ""
