Selector datatables cpe ok 3

--- a/templates/ofertas/seleccionar.html
+++ b/templates/ofertas/seleccionar.html
@@ -34,6 +34,7 @@ $.ajaxSetup({
         "processing": true,
         "serverSide": true,
         "scrollX": true,
+        "order": [[ 1, "asc" ]],
         "ajax": "/rest/seleccion/"+id_oferta,
         "language":{
             "url": "//cdn.datatables.net/plug-ins/1.10.8/i18n/Spanish.json"
@@ -47,7 +48,7 @@ $.ajaxSetup({
             },
             {
                 "data": 0,
-                "orderable":false,
+                "orderable":true,
             },
             {
                 "data": 1,
@@ -85,7 +86,7 @@ $.ajaxSetup({
                         }
                     }
                 },
-                "orderable":false,
+                "orderable":true,
             },
             {
                 "data": 5,
