--- a/templates/home.jade
+++ b/templates/home.jade
@@ -19,7 +19,7 @@ block body_content
         div(class="container")
             div(class="row")
                 div(class="col-md-12")
-                    h2(class="title-A text-center") ¿Cómo funciona Fastwork?
+                    h2(class="title-A text-center") ¿Cómo funciona Fast Work?
             div(class="row")
                 div(class="col-md-6")
                     div(class="title-A-p")
