Cantidad de ofertas y empresas

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -38,7 +38,7 @@ html(lang="es")
                         | {% if user.is_authenticated %}
                         li
                             a(href="/misofertas/")
-                                button(type="button",class="btn btn-success navbar-btn",style="margin-top=0px;") Crear oferta de empleo
+                                button(type="button",class="btn btn-success navbar-btn",style="margin-top=0px;") Publicar ofertas
                         li(class="dropdown avatar")
                             a(href="#",class="dropdown-toggle",style="padding:5px 15px 0px 15px;",data-toggle="dropdown",role="button",aria-haspopup="true",aria-expanded="false")
                                 div(class="img-avatar")
