Cantidad de ofertas y empresas V1

--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -513,3 +513,12 @@ td.details-control
 
 tr.shown td.details-control
     background url('../imagenes/details_close.png') no-repeat center center
+
+.empresas-none
+  height 50px
+  border-radius 10px
+  background-color #f2dede
+  margin-bottom 40px
+
+.empresas-none p
+  padding 15px
