Cantidad de ofertas y empresas V2

--- a/static/css/base.styl
+++ b/static/css/base.styl
@@ -518,7 +518,18 @@ tr.shown td.details-control
   height 50px
   border-radius 10px
   background-color #f2dede
-  margin-bottom 40px
+  margin-bottom 20px
+
+.empresas-activo
+  border-radius 10px
+  background-color #d9edf7
+  margin-bottom 20px
+
+.empresas-activo h4
+  padding 15px 0px 0px 15px
+
+.empresas-activo p
+  padding 0px 0px 15px 15px
 
 .empresas-none p
   padding 15px
