--- a/templates/empresas/inicio.jade
+++ b/templates/empresas/inicio.jade
@@ -21,10 +21,10 @@ block body_content
                             p {{empresa.descripcion}}
                         |{% endfor %}
                         |{% endif %}
-                        p Creditos disponibles: {{CANTIDAD_EMPRESAS_DISPONIBLE}} -
-                            a(href="crearempresa/comprar",style="color:#337ab7")  Comprar creditos
+                        p Creditos disponibles: {{CANTIDAD_EMPRESAS_DISPONIBLE}}
                         a(href="crearempresa/")
-                            button(type="button",class="btn btn-lg btn-success") Añadir empresa
+                            button(type="button",class="btn btn-lg btn-success btn-sm") Añadir empresa
+                        button(type="button",class="btn btn-lg btn-primary btn-sm",style="margin-left:10px",data-toggle="modal" data-target="#CreditosEmpresa") Comprar creditos
 
             fieldset
                 legend MIS OFERTAS DE EMPLEO:
@@ -38,7 +38,101 @@ block body_content
                         |{% for oferta in OFERTAS %}
                         |{% endfor %}
                         |{% endif %}
-                        p Creditos disponibles: {{CANTIDAD_OFERTAS_DISPONIBLE}} -
-                            a(href="crearoferta/comprar",style="color:#337ab7")  Comprar creditos
+                        p Creditos disponibles: {{CANTIDAD_OFERTAS_DISPONIBLE}}
                         a(href="crearoferta/")
-                            button(type="button",class="btn btn-lg btn-success") Añadir oferta
+                            button(type="button",class="btn btn-lg btn-success btn-sm") Añadir oferta
+                        button(type="button",class="btn btn-lg btn-primary btn-sm",style="margin-left:10px") Comprar creditos
+
+   div(class="modal fade",id="CreditosEmpresa",tabindex="-1",role="dialog",aria-labelledby="myModalLabel")
+        div(class="modal-dialog modal-lg",role="document")
+            div(class="modal-content")
+                div(class="modal-header")
+                    button(type="button",class="close closeExperienciaModal",data-dismiss="modal",aria-label="Close")
+                        span(aria-hidden="true") &times;
+                    h4(class="modal-title",id="myModalLabel") Creditos empresa
+                div(class="modal-body")
+                    form(role="form",id="experienciaForm",method="POST",action="/misofertas/crearempresa/comprar/")
+                        |{% csrf_token %}
+                        div(class="form-group")
+                            div(class="container-fluid")
+                                div(class="row")
+                                    div(class="col-sm-4")
+                                        label(for="nombres") Nombres*
+                                        input(type="text",value='{{nombres}}',class="form-control",id="id_nombres",name="nombres",data-validation="required",data-validation-error-msg="Escribe tu nombre")
+                                    div(class="col-sm-4")
+                                        label(for="nombres") Apellidos*
+                                        input(type="text",value='{{apellidos}}',class="form-control",id="id_apellidos",name="apellidos",data-validation="required",data-validation-error-msg="Escribe por lo menos un apellido")
+                                    div(class="col-sm-4")
+                                        label(for="nombres") Cedula*
+                                        input(type="text",class="form-control",id="id_cedula",name="cedula",data-validation="required",data-validation-error-msg="Escribe tu numero de cedula")
+
+                                div(class="row")
+                                    div(class="col-sm-6")
+                                        label(for="nombres") Dirección*
+                                        input(type="text",class="form-control",id="id_direccion",name="direccion",data-validation="required",data-validation-error-msg="Escribe tu direccion")
+
+
+                                    div(class="col-sm-6")
+                                        label(for="Cargo") Telefono*
+                                        input(type="text",class="form-control",id="id_telefono",name="telefono",data-validation="required",data-validation-error-msg="Escribe tu numero telefónico")
+                                div(class="row")
+                                    fieldset
+                                        legend
+
+                                div(class="row")
+                                    div(class="col-sm-6")
+                                        label(for="sector") Cantidad de creditos*
+                                        select(class="form-control",id="id_cantidad",name="cantidad",data-validation="required",data-validation-error-msg="Selecciona la cantidad de creditos")
+                                            option 1
+                                            option 2
+                                            option 3
+                                            option 4
+                                            option 5
+                                            option 6
+                                            option 7
+                                            option 8
+                                            option 9
+                                            option 10
+
+                                    div(class="col-sm-6")
+                                        div(class="text-center")
+                                            img(src="{% static 'imagenes/logo-mercadopago.png' %}",height="60px")
+                                            h2(id="id_valor_empresa") $ 100.000
+
+                                div(class="row")
+                                    div(class="col-sm-12")
+                                        p Los campos con (*) son obligatorios.
+
+                        div(class="modal-footer")
+                            button(type="button",class="btn btn-default closeExperienciaModal",data-dismiss="modal") Cerrar
+                            input(type="submit",class="btn btn-primary",value="Comprar",id="guardarExperienciaModal")
+
+block extra_script
+    script(src="{% static 'js/ajax_django.js' %}")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.2.8/jquery.form-validator.min.js")
+    script.
+        $(document).ready(function(){
+            $.validate({modules : 'date, security',validateOnBlur : false});
+
+            $.ajax({
+                    type: "GET",
+                    url: "/rest/valores/empresas/?cantidad=" + $("#id_cantidad").val(),
+                    success: function(data)
+                    {
+                        console.log(data.valor);
+                        $("#id_valor_empresa").text(data.valor);
+                    }
+            });
+
+            $("#id_cantidad").change(function() {
+                $.ajax({
+                    type: "GET",
+                    url: "/rest/valores/empresas/?cantidad=" + $("#id_cantidad").val(),
+                    success: function(data)
+                    {
+                        $("#id_valor_empresa").text(data.valor);
+                    }
+                });
+            });
+
+        });
