--- a/templates/base.jade
+++ b/templates/base.jade
@@ -22,7 +22,7 @@ html(lang="es")
         link(rel="stylesheet",href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.css")
         link(rel="stylesheet",href="https://cdn.jsdelivr.net/animatecss/3.5.1/animate.min.css")
         link(rel="stylesheet",href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css")
-        link(rel="stylesheet",href="{% static 'css/base.css' %}")
+        link(rel="stylesheet",href="{% static 'css/base1.css' %}")
         block extra_style
     body
         nav(class="navbar navbar-fastwork navbar-fixed-top",role="navigation")
