--- a/static/css/base1.styl
+++ b/static/css/base1.styl
@@ -515,7 +515,7 @@ tr.shown td.details-control
     background url('../imagenes/details_close.png') no-repeat center center
 
 .empresas-none
-  height 50px
+  padding 10px
   border-radius 10px
   background-color #f2dede
   margin-bottom 20px
